# bearer

./: .dockerignore  .drone.yml  .envrc.example  .eslintignore  .gitattributes  .gitignore  .goreleaser.yaml  .prettierignore  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  GETTING_STARTED.md  Jenkinsfile  LICENSE  README.md  SECURITY.md  bearer.ignore  cpuprof  curio.yml  dataflow.yaml  docker-compose.yml  go.mod  go.mod.graph  go.sum  lerna.json  package.json  pkg_coverage.out  tsconfig.json  tslint.json
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  main.workflow
.goreleaser/: canary.yaml  common.yaml  darwin.yaml  prepare.yaml  test-linux.yaml
.jenkins/: build.sh  deploy.sh  node.yml  test.sh
__test__/: bearer-provider.test.tsx  from-bearer.test.tsx
api/: client.go  config.go  fetch_ignores.go  hello.go  request_file_upload.go  scan_finished.go  types.go  version.go
battle_tests/: Dockerfile  battle_tests.go
contrib/: install.sh
docs/: .eleventy.js  .eleventyignore  .eslintrc.js  .gitignore  11tydata.json  404.md  _redirects  docs.md  index.njk  package-lock.json  package.json  quickstart.md  readme.md  robots.njk  robots.txt  rules.csv.njk  sitemap.njk  version.json.njk
e2e/: e2e_test.go
goreleaser/: darwin-brew.yaml  darwin.yaml  linux-docker.yaml  linux.yaml  prepare.yaml  publish_brew.yaml  release.yaml
kpi_scan/: Dockerfile  README.md  kpi_repo_list.json  kpi_repo_list.json5  run.sh
pkg/detectors/dependencies/pyproject/testdata/: pyproject.toml
(+4855 files in other folders)
