[tool.poetry]
name = "bitcoin-node-crawler"
version = "0.1.0"
description = ""
authors = ["Daniel van Flymen <vanflymen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
synapse-p2p = "^0.1.4"
faker = "^1.0"
colorama = {version = "^0.4.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
faker = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
